<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">News Kit</string>
    <string name="news">News</string>
    <string name="action_info">About News Kit</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate_app">Rate News Kit</string>
    <string name="action_facebook_like">Like us on Facebook</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="content_description">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Main -->
    <string name="action_edition">Select News</string>

    <!-- Newsfeed Detail -->
    <string name="newsfeed_select_news_section">News Section</string>
    <string name="newsfeed_auto_scroll">Auto Scroll</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- News Detail -->
    <string name="news_detail_share_message">News Kit: Please read it!</string>
    <string name="news_detail_link_copied">The link is copied</string>

    <!-- News Select -->
    <string name="select_newsfeed_title">News List</string>
    <string name="custom_news_feed_dialog_title">Add an RSS Feed</string>
    <string name="custom_news_feed_menu_item_title">RSS</string>
    <string name="custom_news_feed_url">URL</string>

    <!-- Setting -->
    <string name="setting_language">Language</string>
    <string name="setting_keep_screen_on">Keep Screen On</string>
    <string name="setting_tutorial">Tutorial</string>
    <string name="setting_main_sub_header">Main Screen</string>
    <string name="setting_main_auto_refresh_interval">News Refresh Rate</string>
    <string name="setting_main_auto_refresh_interval_caption">Interval</string>
    <string name="setting_main_auto_refresh_speed">Flip Animation Speed</string>
    <string name="setting_main_headline_font_size">Headline Font Size</string>
    <string name="setting_main_headline_font_size_very_small">Very Small</string>
    <string name="setting_main_headline_font_size_small">Small</string>
    <string name="setting_main_headline_font_size_large">Large</string>
    <string name="setting_main_headline_font_size_very_large">Very Large</string>
    <string name="setting_main_panel_matrix">News Matrix</string>
    <string name="setting_main_panel_matrix_description">%1$s Panels</string>
    <string name="setting_news_feed_sub_header">News Feed Screen</string>
    <string name="setting_news_feed_auto_scroll_start_offset">Auto Scroll Start</string>
    <string name="setting_news_feed_auto_scroll_speed">Auto Scroll Speed</string>
    <string name="setting_news_feed_auto_scroll_very_slow">Very Slow</string>
    <string name="setting_news_feed_auto_scroll_slow">Slow</string>
    <string name="setting_news_feed_auto_scroll_normal">Normal</string>
    <string name="setting_news_feed_auto_scroll_fast">Fast</string>
    <string name="setting_news_feed_auto_scroll_very_fast">Very Fast</string>

    <!-- Pair -->
    <string name="setting_pair_tv">Pair Android TV</string>
    <string name="setting_pair_tv_description">Sync your mobile settings with your Android TV</string>
    <string name="setting_pair_tv_dialog_description">Type 5 numbers shown in the \"Pair Now\" tab of your Android TV and press Confirm</string>
    <string name="setting_pair_tv_code_invalidate">Code invalidate. Please check 5 numbers shown in the \"Pair Now\" tab of your Android TV</string>
    <string name="setting_pair_tv_data_sent">Succeed to pair with Android TV</string>
    <string name="setting_pair_tv_error_msg">Pair failed. Please try again.</string>

    <!-- Recommend -->
    <string name="recommend_to_friends">Recommend to your friends</string>
    <string name="recommend_title">Check out this new app, it\'s awesome!</string>
    <string name="recommend_description">Click the link and take it for a spin</string>

    <!-- Feedback -->
    <string name="feedback_description">How can we improve News Kit?</string>

    <!-- Ad -->
    <string name="quit_ad_dialog_title_text">Are you sure you want to quit?</string>

    <!-- Store -->
    <string name="store">Store (Pro Features)</string>
    <string name="store_title_text_1">Buy</string>
    <string name="store_title_text_2">the Pro Version!</string>
    <string name="store_description_text_1">Upgrade to unlock ALL Functions and Features</string>
    <string name="store_description_text_2">+ No Ads!</string>
    <string name="store_description_text_2_highlight">+ No Ads!</string>
    <string name="store_pro_version_original_price">$4.99</string>
    <string name="store_pro_version_discounted_price">$2.99</string>
    <string name="store_purchased">Purchased</string>
    <string name="store_thank_you">Thank You!</string>
    <string name="store_item_price">$0.99</string>
    <string name="store_no_ads_title">No Ads</string>
    <string name="store_no_ads_description">Remove all ads</string>
    <string name="store_more_panel_title">More News Panels</string>
    <string name="store_more_panel_description">Use 4 More News Panels</string>
    <string name="store_custom_rss_feed_title">Custom RSS Feeds</string>
    <string name="store_custom_rss_feed_description">Add any RSS Feeds</string>

    <!-- Main Network Unavailable Cover -->
    <string name="main_network_unavailable_cant_connect">Network Unavailable</string>
    <string name="main_network_unavailable_retry">Tap to Retry</string>

    <!-- Info -->
    <string name="info_news_info">News Kit Info</string>
    <string name="info_credit">Credits</string>

    <!-- More Info -->
    <string name="more_info_yooii_studios">Yooii Studios</string>
    <string name="more_info_news_help">News Kit Help</string>
    <string name="more_info_version">Version</string>
    <string name="more_info_license">License</string>

    <!-- Store Ad -->
    <string name="store_buy_pro_version">Buy the Pro Version!</string>
    <string name="store_sub_description">All Functions and Features + No Ads</string>

    <!-- Notification -->
    <string name="notification_title">Good Morning!</string>
    <string name="notification_description">Your morning news is ready.</string>
    <string name="notification_ask_description">Would you like to receive news notification every morning?</string>

    <!-- Error Message -->
    <string name="news_feed_fetch_error_invalid_topic_url">Currently Unavailable.</string>
    <string name="news_feed_fetch_error_invalid_custom_url">Invalid RSS URL</string>
    <string name="news_feed_fetch_error_timeout">Timeout. Please check your internet connectivity</string>

    <!-- Morning Kit Ad -->
    <string name="morningkit_ad_app_name">Morning Kit</string>
    <string name="morningkit_ad_description">Alarm + Info Panels</string>
    <string name="morningkit_ad_guide_text">Everything you need in the morning at a glance!</string>
    <string name="download">Download</string>
    <string name="close">Close</string>

    <!-- 출시시 정렬 다시할 추가 스트링-->
    <!-- General -->
    <string name="add_more_panels">Add more news panels</string>
    <string name="app_name_full">News Kit</string>
    <string name="minute">m</string>
    <string name="second">s</string>

    <!-- Rate it -->
    <string name="rate_it_contents">Please rate us 5 stars!\nWithout your support, we don\'t exist :)</string>
    <string name="rate_it_rate">Rate it</string>
    <string name="rate_it_no_thanks">Later</string>
    <string name="rate_news_kit_title">Rate News Kit</string>

    <!-- Error Message -->
    <string name="news_feed_fetch_error_unknown">Temporarily unavailable, Please try later.</string>

    <!-- Setting -->
    <string name="setting_general_sub_header">General</string>
    <string name="setting_notification">Notifications</string>
    <string name="setting_pair_tv_insert_code">Insert Code</string>

    <!-- Custom RSS -->
    <string name="custom_rss_recent_list">RECENT</string>
</resources>