<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
      tools:ignore="AppCompatResource" >

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_menu_moreoverflow_mtrl_alpha"
        android:title=""
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>
            <item android:id="@+id/action_store"
                  android:title="@string/store"
                  android:orderInCategory="100"
                  android:showAsAction="never" />

            <item android:id="@+id/action_edition"
                  android:title="@string/action_edition"
                  android:orderInCategory="200"
                  android:showAsAction="never" />

            <item android:id="@+id/action_info"
                  android:title="@string/action_info"
                  android:orderInCategory="300"
                  android:showAsAction="never" />

            <item android:id="@+id/action_settings"
                  android:title="@string/action_settings"
                  android:orderInCategory="400"
                  android:showAsAction="never" />

            <item android:id="@+id/action_rate_app"
                  android:title="@string/action_rate_app"
                  android:orderInCategory="500"
                  android:showAsAction="never" />

            <item android:id="@+id/action_facebook_like"
                  android:title="@string/action_facebook_like"
                  android:orderInCategory="600"
                  android:showAsAction="never" />

            <item android:id="@+id/action_remove_archive"
                  android:title="Remove Archives"
                  android:orderInCategory="10000"
                  android:showAsAction="never" />

            <item android:id="@+id/action_copy_db"
                  android:title="Remove Archives"
                  android:orderInCategory="10000"
                  android:showAsAction="never" />

            <item android:id="@+id/action_slow_anim"
                  android:title="Slow Activity Transition"
                  android:orderInCategory="10000"
                  android:showAsAction="never"
                  android:checkable="true" />

            <item android:id="@+id/action_service_log"
                  android:title="Show service log(Debug)"
                  android:orderInCategory="10000"
                  android:showAsAction="never"/>

            <item android:id="@+id/action_trigger_notification"
                  android:title="Notification(Debug)"
                  android:orderInCategory="10000"
                  android:showAsAction="never"/>
        </menu>
    </item>
</menu>
